2000-09-05  Mathieu Lacage  <mathieu@eazel.com>

	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(populate_viewer_menu): initialize found_match to TRUE
	to avoid a segfault in certain non-obvious cases. this 
	is a temporary hack waiting for bug 2766.

2000-09-05  John Sullivan  <sullivan@eazel.com>

	Wrote bugs for the last (for now) 18 unbugged FIXMEs.

	* mime-type-capplet/nautilus-mime-type-icon-entry.c:
	(drag_data_get):
	* modules/bzip2-method.c: (do_get_file_info):
	* modules/extfs-method.c:
	* modules/file-method.c: (do_create_symbolic_link):
	* modules/ftp-method.c: (internal_get_file_info):
	* modules/gconf-method.c:
	* modules/gzip-method.c: (do_get_file_info):
	* modules/http-method.c: (process_propfind_propstat):
	* modules/translate-method.c: (tr_apply_default_mime_type),
	(tr_handle_exec), (tr_uri_translate):
	* test/test-shell.c: (do_info):
	* test/test-uri.c: (main):

2000-09-05  Martin Baulig  <baulig@suse.de>

	* Makefile.am (SUBDIRS): Remove unconditional listing of the
	mime-type-capplet, it is already contained in $(SUBDIRS_GNOME) for
	the GNOME 1.x platform.

2000-09-05  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs/gnome-vfs-mime-magic.c: Fixed spelling in a FIXME.
	
	* modules/ftp-method.c: (ls_to_file_info): Fixed another minor
	formatting problem.

2000-09-04  Mathieu Lacage  <mathieu@eazel.com>

	Add bugs to bugzilla.eazel.com for FIXMEs...
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_action_type),
	(gnome_vfs_mime_get_default_application),
	(get_executable_name_from_command_string):
	* libgnomevfs/gnome-vfs-mime-info.c: (gnome_vfs_mime_get_value),
	(gnome_vfs_get_registered_mime_types):
	* libgnomevfs/gnome-vfs-mime-magic.c:
	* libgnomevfs/gnome-vfs-uri.c:
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(mime_list_selected_row_callback), (init_mime_capplet),
	(populate_viewer_menu), (delete_mime_clicked), (pixmap_file):

2000-09-03  Mathieu Lacage  <mathieu@eazel.com>
